# openvx_tutorial

./: .gitignore  .gitmodules  LICENSE  README.md  qt-clean.sh
book_samples/: CMakeLists.txt  ExamplesByChapter.md  LICENSE  README
book_samples/background/: vx_bg.c  vx_bg_ex1.c  vx_bg_ex2.c
book_samples/birds-eye/: CMakeLists.txt  birdsEyeView.c  opencv-birdsEyeView.cpp
book_samples/deploy/: XML-example.c  export_graph.c  graphFactory.c  graphFactoryTest.c  processGraph.cpp  process_graph.c
book_samples/example1/: CMakeLists.txt  example1.c
book_samples/example2/: CMakeLists.txt  example2.c
book_samples/example3/: CMakeLists.txt  example3.c
book_samples/example4/: CMakeLists.txt  changeImage.c  example4.c  example4a.c
book_samples/filter/: CMakeLists.txt  filterGaussImage.c  filterImage.c  filterImageROI.c  filterImageROIvxu.c
book_samples/hough/: CMakeLists.txt  houghLines.c  houghLinesEx.c
book_samples/opencl_interop/: CMakeLists.txt  common.h  interop_example.cpp  my_vx_tensor_map_impl.cpp  my_vx_tensor_map_impl.h  opencl_example.cpp  opencl_interop_example.cpp  opencl_kernel_example.cpp
book_samples/ppm-io/: readImage.c  readImage.h  writeImage.c  writeImage.h
book_samples/stitch/: CMakeLists.txt  homography-multiband-opencv.cpp  homography-opencv.cpp  stitch-debug.c  stitch-multiband.c  stitch.c
book_samples/tracking/: CMakeLists.txt  centroid_tracking.c  centroid_tracking.h  tracking_example.cpp
book_samples/undistort/: CMakeLists.txt  undistort-remap.c  undistortOpenCV.cpp
examples/onnx2openvx/: Makefile  common.hpp  main.cpp  onnx2openvx.cpp  onnx2openvx.hpp  pb2int16.py
examples/onnx2openvx/nn_ext2/: concat_kernel.cpp  concat_kernel.hpp  nn_ext2.cpp  nn_ext2.h  nn_ext2_common.cpp  nn_ext2_common.hpp  reshape_kernel.cpp  reshape_kernel.hpp
scripts/: clean-all.sh  download-amdovx.sh  download-khronos-sample.sh  download-videos.sh  qt-clean.sh
tutorial_exercises/: CMakeLists.txt
tutorial_exercises/easy_exercise1/: CMakeLists.txt  Makefile  easy_exercise1.cpp
tutorial_exercises/easy_exercise2/: CMakeLists.txt  Makefile  easy_exercise2.cpp
tutorial_exercises/easy_exercise3/: CMakeLists.txt  Makefile  easy_exercise3.cpp
tutorial_exercises/easy_exercise4/: CMakeLists.txt  Makefile  easy_exercise4.cpp
tutorial_exercises/exercise1/: CMakeLists.txt  Makefile  exercise1.cpp  opencv_camera_display.h
tutorial_exercises/exercise2/: CMakeLists.txt  Makefile  exercise2.cpp
tutorial_exercises/exercise2a/: CMakeLists.txt  exercise2a.cpp
tutorial_exercises/exercise3/: CMakeLists.txt  Makefile  exercise3.cpp
tutorial_exercises/exercise4/: CMakeLists.txt  Makefile  exercise4.cpp
tutorial_exercises/include/: opencv_camera_display.h
tutorial_exercises/include/VX/: vx.h  vx_api.h  vx_compatibility.h  vx_import.h  vx_kernels.h  vx_khr_class.h  vx_khr_icd.h  vx_khr_ix.h  vx_khr_nn.h  vx_khr_tiling.h  vx_khr_xml.h  vx_nodes.h  vx_types.h  vx_vendors.h  vxu.h
tutorial_exercises/solution_exercise1/: CMakeLists.txt  Makefile  opencv_camera_display.h  solution_exercise1.cpp
tutorial_exercises/solution_exercise2/: CMakeLists.txt  Makefile  solution_exercise2.cpp
tutorial_exercises/solution_exercise2a/: solution_exercise2a.cpp
tutorial_exercises/solution_exercise3/: CMakeLists.txt  Makefile  solution_exercise3.cpp
tutorial_exercises/solution_exercise4/: CMakeLists.txt  Makefile  solution_exercise4.cpp
tutorial_exercises/vgg16-nnef-openvx/: README.md  tf2nnef.py  vgg16_export.py
