cmake_minimum_required ( VERSION 2.8        )
project                ( tutorial_exercises )

option(USE_KHRONOS_SAMPLE "Use Khronos Sample Implementation" ON)

add_subdirectory       ( exercise1          )
add_subdirectory       ( exercise2          )
add_subdirectory       ( exercise3          )
add_subdirectory       ( exercise4          )
add_subdirectory       ( easy_exercise1     )
add_subdirectory       ( easy_exercise2     )
add_subdirectory       ( easy_exercise3     )
add_subdirectory       ( easy_exercise4     )
add_subdirectory       ( solution_exercise1 )
add_subdirectory       ( solution_exercise2 )
add_subdirectory       ( solution_exercise3 )
add_subdirectory       ( solution_exercise4 )
if(NOT USE_KHRONOS_SAMPLE)
  add_subdirectory     ( openvx             )
endif()
