cmake_minimum_required ( VERSION 2.8        )
project                ( tutorial_exercises )

option                 ( USE_KHRONOS_SAMPLE "Use khronos sample implementation" ON                 )
set                    ( OpenVX_SAMPLE /home/openvx/openvx_sample/install/Linux/x64                )
set                    ( CMAKE_MACOSX_RPATH ON                                                     )
if( USE_KHRONOS_SAMPLE AND EXISTS ${OpenVX_SAMPLE}/ )
  set                  ( OpenVX_LIBRARIES openvx vxu CACHE INTERNAL OpenVX_LIBRARIES               )
  if( CMAKE_BUILD_TYPE MATCHES ".*Deb.*" )
    set                ( OpenVX_LIBPATH ${OpenVX_SAMPLE}/Debug/bin CACHE INTERNAL OpenVX_LIBPATH   )
  else( CMAKE_BUILD_TYPE MATCHES ".*Deb.*" )
    set                ( OpenVX_LIBPATH ${OpenVX_SAMPLE}/Release/bin CACHE INTERNAL OpenVX_LIBPATH )
  endif( CMAKE_BUILD_TYPE MATCHES ".*Deb.*" )
elseif( EXISTS ${CMAKE_SOURCE_DIR}/amdovx-core/ )
  set                  ( CMAKE_DISABLE_FIND_PACKAGE_OpenCL TRUE CACHE INTERNAL CMAKE_DISABLE_FIND_PACKAGE_OpenCL )
  add_subdirectory     ( amdovx-core/openvx                                                        )
  set                  ( OpenVX_LIBRARIES openvx CACHE INTERNAL OpenVX_LIBRARIES                   )
endif()

add_subdirectory       ( exercise1          )
add_subdirectory       ( exercise2          )
add_subdirectory       ( exercise3          )
add_subdirectory       ( exercise4          )
add_subdirectory       ( easy_exercise1     )
add_subdirectory       ( easy_exercise2     )
add_subdirectory       ( easy_exercise3     )
add_subdirectory       ( easy_exercise4     )
add_subdirectory       ( solution_exercise1 )
add_subdirectory       ( solution_exercise2 )
add_subdirectory       ( solution_exercise3 )
add_subdirectory       ( solution_exercise4 )
